Dark mode fixes and theming for buttons

--- a/example/index.css
+++ b/example/index.css
@@ -7,7 +7,7 @@ body {
   padding: var(--st-grid-unit2x);
 }
 
-body.st-theme-dark {
+.st-theme-dark {
   background: var(--st-gray-100);
 }
 
